# src/warehouse/dto/warehouse-update.dto.ts
@@ -1,0 +1,7 @@
+import { IsOptional, IsNumber } from 'class-validator';
+
+export class WarehouseUpdateDto {
+	@IsOptional()
+	@IsNumber(undefined, { message: 'Неверно указано количество товара' })
+	quantity?: number;
+}
